// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/integrations/ConfirmIntegration should match snapshot, bad integration type case 1`] = `<div />`;

exports[`components/integrations/ConfirmIntegration should match snapshot, commands case 1`] = `
<div>
  <div
    class="backstage-content row"
  >
    <div
      class="backstage-header"
    >
      <h1>
        <a
          href="/team_test/integrations/commands"
        >
          Slash Commands
        </a>
        <span
          class="backstage-header__divider"
        >
          <i
            class="fa fa-angle-right"
            title="Breadcrumb Icon"
          />
        </span>
        Add
      </h1>
    </div>
    <div
      class="backstage-form backstage-form__confirmation"
    >
      <h4
        class="backstage-form__title"
        id="formTitle"
      >
        Setup Successful
      </h4>
      <p>
        Your slash command is set up. The following token will be sent in the outgoing payload. Please use it to verify the request came from your Mattermost team (details at 
        <a
          href="https://mattermost.com/pl/setup-custom-slash-commands?utm_source=mattermost&utm_medium=in-product&utm_content=confirm_integration&uid=currentUserId&sid=&edition=team&server_version="
          location="confirm_integration"
          rel="noopener noreferrer"
          target="_blank"
        >
          Slash Commands
        </a>
        ).
      </p>
      <p
        class="word-break--all"
      >
        <b>
          Token
        </b>
        : 
        <code>
          jb6oyqh95irpbx8fo9zmndkp1r
        </code>
        <button
          aria-label="Copy Token"
          class="_icon-button_mytxt_2 _icon-button--size-x-small_mytxt_55 ml-2"
          data-testid="copyText"
          type="button"
        >
          <span
            aria-hidden="true"
            class="_icon-button__icon-slot_mytxt_33"
          >
            <div
              aria-hidden="true"
              class="_icon_1i355_2 _icon--size-12_1i355_30"
            >
              <div
                class="_icon__glyph-area_1i355_9"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </button>
      </p>
      <div
        class="backstage-form__footer"
      >
        <a
          class="btn btn-primary"
          href="/team_test/integrations/commands"
          id="doneButton"
          type="submit"
        >
          Done
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/integrations/ConfirmIntegration should match snapshot, incomingHooks case 1`] = `
<div>
  <div
    class="backstage-content row"
  >
    <div
      class="backstage-header"
    >
      <h1>
        <a
          href="/team_test/integrations/incoming_webhooks"
        >
          Incoming Webhooks
        </a>
        <span
          class="backstage-header__divider"
        >
          <i
            class="fa fa-angle-right"
            title="Breadcrumb Icon"
          />
        </span>
        Add
      </h1>
    </div>
    <div
      class="backstage-form backstage-form__confirmation"
    >
      <h4
        class="backstage-form__title"
        id="formTitle"
      >
        Setup Successful
      </h4>
      <p>
        Your incoming webhook is set up. Please send data to the following URL (details at 
        <a
          href="https://mattermost.com/pl/setup-incoming-webhooks?utm_source=mattermost&utm_medium=in-product&utm_content=confirm_integration&uid=currentUserId&sid=&edition=team&server_version="
          location="confirm_integration"
          rel="noopener noreferrer"
          target="_blank"
        >
          Incoming Webhooks
        </a>
        ).
      </p>
      <p
        class="word-break--all"
      >
        <b>
          URL
        </b>
        : 
        <code>
          http://localhost:8065/hooks/r5tpgt4iepf45jt768jz84djic
        </code>
        <button
          aria-label="Copy Token"
          class="_icon-button_mytxt_2 _icon-button--size-x-small_mytxt_55 ml-2"
          data-testid="copyText"
          type="button"
        >
          <span
            aria-hidden="true"
            class="_icon-button__icon-slot_mytxt_33"
          >
            <div
              aria-hidden="true"
              class="_icon_1i355_2 _icon--size-12_1i355_30"
            >
              <div
                class="_icon__glyph-area_1i355_9"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </button>
      </p>
      <div
        class="backstage-form__footer"
      >
        <a
          class="btn btn-primary"
          href="/team_test/integrations/incoming_webhooks"
          id="doneButton"
          type="submit"
        >
          Done
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/integrations/ConfirmIntegration should match snapshot, oauthApps case 1`] = `
<div>
  <div
    class="backstage-content row"
  >
    <div
      class="backstage-header"
    >
      <h1>
        <a
          href="/team_test/integrations/oauth2-apps"
        >
          OAuth 2.0 Applications
        </a>
        <span
          class="backstage-header__divider"
        >
          <i
            class="fa fa-angle-right"
            title="Breadcrumb Icon"
          />
        </span>
        Add
      </h1>
    </div>
    <div
      class="backstage-form backstage-form__confirmation"
    >
      <h4
        class="backstage-form__title"
        id="formTitle"
      >
        Setup Successful
      </h4>
      <p>
        Your OAuth 2.0 application is set up. Please use the following Client ID and Client Secret when requesting authorization for your application (details at 
        <a
          href="https://mattermost.com/pl/setup-oauth-2.0?utm_source=mattermost&utm_medium=in-product&utm_content=confirm_integration&uid=currentUserId&sid=&edition=team&server_version="
          location="confirm_integration"
          rel="noopener noreferrer"
          target="_blank"
        >
          oAuth 2.0 Applications
        </a>
        ).
      </p>
      <p>
        <b>
          Client ID
        </b>
        : 
        <code>
          r5tpgt4iepf45jt768jz84djic
        </code>
        <button
          aria-label="Copy Client Id"
          class="_icon-button_mytxt_2 _icon-button--size-x-small_mytxt_55 ml-2"
          data-testid="copyText"
          type="button"
        >
          <span
            aria-hidden="true"
            class="_icon-button__icon-slot_mytxt_33"
          >
            <div
              aria-hidden="true"
              class="_icon_1i355_2 _icon--size-12_1i355_30"
            >
              <div
                class="_icon__glyph-area_1i355_9"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </button>
        <br />
        <b>
          Client Secret
        </b>
        : 
        <code>
          &lt;==secret==&gt;
        </code>
        <button
          aria-label="Copy Client Secret"
          class="_icon-button_mytxt_2 _icon-button--size-x-small_mytxt_55 ml-2"
          data-testid="copyText"
          type="button"
        >
          <span
            aria-hidden="true"
            class="_icon-button__icon-slot_mytxt_33"
          >
            <div
              aria-hidden="true"
              class="_icon_1i355_2 _icon--size-12_1i355_30"
            >
              <div
                class="_icon__glyph-area_1i355_9"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </button>
      </p>
      <p>
        Here are your authorized redirect URLs.
      </p>
      <p
        class="word-break--all"
      >
        <b>
          URL(s)
        </b>
        : https://someCallback, https://anotherCallback
      </p>
      <div
        class="backstage-form__footer"
      >
        <a
          class="btn btn-primary"
          href="/team_test/integrations/oauth2-apps"
          id="doneButton"
          type="submit"
        >
          Done
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/integrations/ConfirmIntegration should match snapshot, outgoingHooks and bad identifier case 1`] = `<div />`;

exports[`components/integrations/ConfirmIntegration should match snapshot, outgoingHooks case 1`] = `
<div>
  <div
    class="backstage-content row"
  >
    <div
      class="backstage-header"
    >
      <h1>
        <a
          href="/team_test/integrations/outgoing_webhooks"
        >
          Outgoing Webhooks
        </a>
        <span
          class="backstage-header__divider"
        >
          <i
            class="fa fa-angle-right"
            title="Breadcrumb Icon"
          />
        </span>
        Add
      </h1>
    </div>
    <div
      class="backstage-form backstage-form__confirmation"
    >
      <h4
        class="backstage-form__title"
        id="formTitle"
      >
        Setup Successful
      </h4>
      <p>
        Your outgoing webhook is set up. The following token will be sent in the outgoing payload. Please use it to verify that the request came from your Mattermost team (details at 
        <a
          href="https://mattermost.com/pl/setup-outgoing-webhooks?utm_source=mattermost&utm_medium=in-product&utm_content=confirm_integration&uid=currentUserId&sid=&edition=team&server_version="
          location="confirm_integration"
          rel="noopener noreferrer"
          target="_blank"
        >
          Outgoing Webhooks
        </a>
        ).
      </p>
      <p
        class="word-break--all"
      >
        <b>
          Token
        </b>
        : 
        <code>
          jb6oyqh95irpbx8fo9zmndkp1r
        </code>
        <button
          aria-label="Copy Token"
          class="_icon-button_mytxt_2 _icon-button--size-x-small_mytxt_55 ml-2"
          data-testid="copyText"
          type="button"
        >
          <span
            aria-hidden="true"
            class="_icon-button__icon-slot_mytxt_33"
          >
            <div
              aria-hidden="true"
              class="_icon_1i355_2 _icon--size-12_1i355_30"
            >
              <div
                class="_icon__glyph-area_1i355_9"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  version="1.1"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                  />
                </svg>
              </div>
            </div>
          </span>
        </button>
      </p>
      <div
        class="backstage-form__footer"
      >
        <a
          class="btn btn-primary"
          href="/team_test/integrations/outgoing_webhooks"
          id="doneButton"
          type="submit"
        >
          Done
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/integrations/ConfirmIntegration should match snapshot, outgoingOAuthConnections case 1`] = `
<div>
  <div
    class="backstage-content row"
  >
    <div
      class="backstage-header"
    >
      <h1>
        <a
          href="/team_test/integrations/outgoing-oauth2-connections"
        >
          Outgoing OAuth Connections
        </a>
        <span
          class="backstage-header__divider"
        >
          <i
            class="fa fa-angle-right"
            title="Breadcrumb Icon"
          />
        </span>
        Add
      </h1>
    </div>
    <div
      class="backstage-form backstage-form__confirmation"
    >
      <h4
        class="backstage-form__title"
        id="formTitle"
      >
        Setup Successful
      </h4>
      <p>
        Your Outgoing OAuth 2.0 Connection is set up. When a request is sent to one of the following Audience URLs, the Client ID and Client Secret will now be used to retrieve a token from the Token URL, before sending the integration request (details at 
        <a
          href="https://mattermost.com/pl/setup-oauth-2.0?utm_source=mattermost&utm_medium=in-product&utm_content=confirm_integration&uid=currentUserId&sid=&edition=team&server_version="
          location="confirm_integration"
          rel="noopener noreferrer"
          target="_blank"
        >
          Outgoing OAuth 2.0 Connections
        </a>
        ).
      </p>
      <p>
        <b>
          Client ID
        </b>
        : 
        <code>
          someid
        </code>
        <br />
        <b>
          Client Secret
        </b>
        : ********
      </p>
      <p
        class="word-break--all"
      >
        <b>
          Token URL
        </b>
        : 
        <code>
          https://tokenurl.com
        </code>
      </p>
      <p
        class="word-break--all"
      >
        <b>
          Audience URL(s)
        </b>
        : 
        <code>
          https://myaudience.com
        </code>
      </p>
      <div
        class="backstage-form__footer"
      >
        <a
          class="btn btn-primary"
          href="/team_test/integrations/outgoing-oauth2-connections"
          id="doneButton"
          type="submit"
        >
          Done
        </a>
      </div>
    </div>
  </div>
</div>
`;
